// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Header component should add props to navigation component 1`] = `
<header
  className="app__header"
>
  <div
    className="layout layout--gutter-none layout--align-middle app__primary-navigation"
  >
    <div
      className="layout__item u-fit hide-sm"
    >
      <div
        className="burger-menu"
      >
        <Button
          appearance="no-style"
          className="burger-menu__button"
          linkToNewTab={false}
          onClickHandler={[Function]}
          shape="rectangle"
          type="button"
        >
          <div
            className="burger-menu__icon"
          />
        </Button>
      </div>
    </div>
    <div
      className="layout__item u-fill"
    >
      <Link
        className="app__header__home"
        replace={false}
        to="/"
      >
        <span
          className="app__header__logo"
        >
          <UltimakerLogo />
        </span>
        <span
          className="app__header__name show-sm"
        />
      </Link>
    </div>
  </div>
  <Navigation
    accountNavText="Account"
    key=".0"
    navLinks={
      Array [
        Object {
          "label": "Home",
          "path": "/home",
          "visible": true,
        },
      ]
    }
    onCloseMobileMenuHandler={[Function]}
    showMobileMenu={false}
    signOutNavText="Sign out"
  />
</header>
`;

exports[`The Header component should render 1`] = `
<header
  className="app__header"
>
  <div
    className="layout layout--gutter-none layout--align-middle app__primary-navigation"
  >
    <div
      className="layout__item u-fit hide-sm"
    >
      <div
        className="burger-menu"
      >
        <Button
          appearance="no-style"
          className="burger-menu__button"
          linkToNewTab={false}
          onClickHandler={[Function]}
          shape="rectangle"
          type="button"
        >
          <div
            className="burger-menu__icon"
          />
        </Button>
      </div>
    </div>
    <div
      className="layout__item u-fill"
    >
      <Link
        className="app__header__home"
        replace={false}
        to="/"
      >
        <span
          className="app__header__logo"
        >
          <UltimakerLogo />
        </span>
        <span
          className="app__header__name show-sm"
        />
      </Link>
    </div>
  </div>
</header>
`;

exports[`The Header component should render the user account menu 1`] = `
<header
  className="app__header"
>
  <div
    className="layout layout--gutter-none layout--align-middle app__primary-navigation"
  >
    <div
      className="layout__item u-fit hide-sm"
    >
      <div
        className="burger-menu"
      >
        <Button
          appearance="no-style"
          className="burger-menu__button"
          linkToNewTab={false}
          onClickHandler={[Function]}
          shape="rectangle"
          type="button"
        >
          <div
            className="burger-menu__icon"
          />
        </Button>
      </div>
    </div>
    <div
      className="layout__item u-fill"
    >
      <Link
        className="app__header__home"
        replace={false}
        to="/"
      >
        <span
          className="app__header__logo"
        >
          <UltimakerLogo />
        </span>
        <span
          className="app__header__name show-sm"
        />
      </Link>
    </div>
    <div
      className="layout__item u-fit show-sm"
    >
      <div
        className="test-user-account-menu"
      />
    </div>
  </div>
</header>
`;
